// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@primaryKey defines a composite primary key with no sort key fields 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "changeDataCaptureConfig": [],
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyIsSingleField": true,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [],
        "sortKeyIsSingleField": false,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasCdc": false,
        "hasPublicModels": false,
        "hasTtl": false,
        "primaryKey": {
          "isComposite": true,
          "partitionKeyFields": [
            {
              "columnName": "id",
              "columnNamesForRead": [
                "id",
                "id",
              ],
              "computeFunction": undefined,
              "ean": ":id",
              "eav": "#id",
              "fieldName": "id",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "ID",
            },
          ],
          "partitionKeyIsSingleField": true,
          "partitionKeyPrefix": undefined,
          "sortKeyFields": [],
          "sortKeyIsSingleField": false,
          "sortKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": undefined,
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasCdc": false,
      "hasPublicModels": false,
      "hasTtl": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyIsSingleField": true,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [],
        "sortKeyIsSingleField": false,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@primaryKey defines composite primary keys 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "changeDataCaptureConfig": [],
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "external_id",
          "columnNamesForRead": [
            "external_id",
            "externalId",
          ],
          "computeFunction": undefined,
          "ean": ":externalId",
          "eav": "#externalId",
          "fieldName": "externalId",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
        {
          "columnName": "vendor",
          "columnNamesForRead": [
            "vendor",
            "vendor",
          ],
          "computeFunction": undefined,
          "ean": ":vendor",
          "eav": "#vendor",
          "fieldName": "vendor",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": true,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": true,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasCdc": false,
        "hasPublicModels": false,
        "hasTtl": false,
        "primaryKey": {
          "isComposite": true,
          "partitionKeyFields": [
            {
              "columnName": "vendor",
              "columnNamesForRead": [
                "vendor",
                "vendor",
              ],
              "computeFunction": undefined,
              "ean": ":vendor",
              "eav": "#vendor",
              "fieldName": "vendor",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "partitionKeyIsSingleField": true,
          "partitionKeyPrefix": undefined,
          "sortKeyFields": [
            {
              "columnName": "external_id",
              "columnNamesForRead": [
                "external_id",
                "externalId",
              ],
              "computeFunction": undefined,
              "ean": ":externalId",
              "eav": "#externalId",
              "fieldName": "externalId",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "sortKeyIsSingleField": true,
          "sortKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": undefined,
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasCdc": false,
      "hasPublicModels": false,
      "hasTtl": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": true,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": true,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@primaryKey defines multi-field composite primary keys 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "changeDataCaptureConfig": [],
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "external_id",
          "columnNamesForRead": [
            "external_id",
            "externalId",
          ],
          "computeFunction": undefined,
          "ean": ":externalId",
          "eav": "#externalId",
          "fieldName": "externalId",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
        {
          "columnName": "vendor",
          "columnNamesForRead": [
            "vendor",
            "vendor",
          ],
          "computeFunction": undefined,
          "ean": ":vendor",
          "eav": "#vendor",
          "fieldName": "vendor",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "x",
          "columnNamesForRead": [
            "x",
            "x",
          ],
          "computeFunction": undefined,
          "ean": ":x",
          "eav": "#x",
          "fieldName": "x",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "y",
          "columnNamesForRead": [
            "y",
            "y",
          ],
          "computeFunction": undefined,
          "ean": ":y",
          "eav": "#y",
          "fieldName": "y",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": false,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "x",
            "columnNamesForRead": [
              "x",
              "x",
            ],
            "computeFunction": undefined,
            "ean": ":x",
            "eav": "#x",
            "fieldName": "x",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "y",
            "columnNamesForRead": [
              "y",
              "y",
            ],
            "computeFunction": undefined,
            "ean": ":y",
            "eav": "#y",
            "fieldName": "y",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": false,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasCdc": false,
        "hasPublicModels": false,
        "hasTtl": false,
        "primaryKey": {
          "isComposite": true,
          "partitionKeyFields": [
            {
              "columnName": "vendor",
              "columnNamesForRead": [
                "vendor",
                "vendor",
              ],
              "computeFunction": undefined,
              "ean": ":vendor",
              "eav": "#vendor",
              "fieldName": "vendor",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
            {
              "columnName": "external_id",
              "columnNamesForRead": [
                "external_id",
                "externalId",
              ],
              "computeFunction": undefined,
              "ean": ":externalId",
              "eav": "#externalId",
              "fieldName": "externalId",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "partitionKeyIsSingleField": false,
          "partitionKeyPrefix": undefined,
          "sortKeyFields": [
            {
              "columnName": "x",
              "columnNamesForRead": [
                "x",
                "x",
              ],
              "computeFunction": undefined,
              "ean": ":x",
              "eav": "#x",
              "fieldName": "x",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
            {
              "columnName": "y",
              "columnNamesForRead": [
                "y",
                "y",
              ],
              "computeFunction": undefined,
              "ean": ":y",
              "eav": "#y",
              "fieldName": "y",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "sortKeyIsSingleField": false,
          "sortKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": undefined,
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasCdc": false,
      "hasPublicModels": false,
      "hasTtl": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": false,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "x",
            "columnNamesForRead": [
              "x",
              "x",
            ],
            "computeFunction": undefined,
            "ean": ":x",
            "eav": "#x",
            "fieldName": "x",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "y",
            "columnNamesForRead": [
              "y",
              "y",
            ],
            "computeFunction": undefined,
            "ean": ":y",
            "eav": "#y",
            "fieldName": "y",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": false,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@primaryKey defines multi-field composite primary keys with single-field partition key 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "changeDataCaptureConfig": [],
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "external_id",
          "columnNamesForRead": [
            "external_id",
            "externalId",
          ],
          "computeFunction": undefined,
          "ean": ":externalId",
          "eav": "#externalId",
          "fieldName": "externalId",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
        {
          "columnName": "x",
          "columnNamesForRead": [
            "x",
            "x",
          ],
          "computeFunction": undefined,
          "ean": ":x",
          "eav": "#x",
          "fieldName": "x",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "y",
          "columnNamesForRead": [
            "y",
            "y",
          ],
          "computeFunction": undefined,
          "ean": ":y",
          "eav": "#y",
          "fieldName": "y",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": true,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "x",
            "columnNamesForRead": [
              "x",
              "x",
            ],
            "computeFunction": undefined,
            "ean": ":x",
            "eav": "#x",
            "fieldName": "x",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "y",
            "columnNamesForRead": [
              "y",
              "y",
            ],
            "computeFunction": undefined,
            "ean": ":y",
            "eav": "#y",
            "fieldName": "y",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": false,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasCdc": false,
        "hasPublicModels": false,
        "hasTtl": false,
        "primaryKey": {
          "isComposite": true,
          "partitionKeyFields": [
            {
              "columnName": "external_id",
              "columnNamesForRead": [
                "external_id",
                "externalId",
              ],
              "computeFunction": undefined,
              "ean": ":externalId",
              "eav": "#externalId",
              "fieldName": "externalId",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "partitionKeyIsSingleField": true,
          "partitionKeyPrefix": undefined,
          "sortKeyFields": [
            {
              "columnName": "x",
              "columnNamesForRead": [
                "x",
                "x",
              ],
              "computeFunction": undefined,
              "ean": ":x",
              "eav": "#x",
              "fieldName": "x",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
            {
              "columnName": "y",
              "columnNamesForRead": [
                "y",
                "y",
              ],
              "computeFunction": undefined,
              "ean": ":y",
              "eav": "#y",
              "fieldName": "y",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "sortKeyIsSingleField": false,
          "sortKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": undefined,
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasCdc": false,
      "hasPublicModels": false,
      "hasTtl": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": true,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "x",
            "columnNamesForRead": [
              "x",
              "x",
            ],
            "computeFunction": undefined,
            "ean": ":x",
            "eav": "#x",
            "fieldName": "x",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "y",
            "columnNamesForRead": [
              "y",
              "y",
            ],
            "computeFunction": undefined,
            "ean": ":y",
            "eav": "#y",
            "fieldName": "y",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": false,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@primaryKey defines multi-field composite primary keys with single-field sort key 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "changeDataCaptureConfig": [],
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "external_id",
          "columnNamesForRead": [
            "external_id",
            "externalId",
          ],
          "computeFunction": undefined,
          "ean": ":externalId",
          "eav": "#externalId",
          "fieldName": "externalId",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
        {
          "columnName": "vendor",
          "columnNamesForRead": [
            "vendor",
            "vendor",
          ],
          "computeFunction": undefined,
          "ean": ":vendor",
          "eav": "#vendor",
          "fieldName": "vendor",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "y",
          "columnNamesForRead": [
            "y",
            "y",
          ],
          "computeFunction": undefined,
          "ean": ":y",
          "eav": "#y",
          "fieldName": "y",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": false,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "y",
            "columnNamesForRead": [
              "y",
              "y",
            ],
            "computeFunction": undefined,
            "ean": ":y",
            "eav": "#y",
            "fieldName": "y",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": true,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasCdc": false,
        "hasPublicModels": false,
        "hasTtl": false,
        "primaryKey": {
          "isComposite": true,
          "partitionKeyFields": [
            {
              "columnName": "vendor",
              "columnNamesForRead": [
                "vendor",
                "vendor",
              ],
              "computeFunction": undefined,
              "ean": ":vendor",
              "eav": "#vendor",
              "fieldName": "vendor",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
            {
              "columnName": "external_id",
              "columnNamesForRead": [
                "external_id",
                "externalId",
              ],
              "computeFunction": undefined,
              "ean": ":externalId",
              "eav": "#externalId",
              "fieldName": "externalId",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "partitionKeyIsSingleField": false,
          "partitionKeyPrefix": undefined,
          "sortKeyFields": [
            {
              "columnName": "y",
              "columnNamesForRead": [
                "y",
                "y",
              ],
              "computeFunction": undefined,
              "ean": ":y",
              "eav": "#y",
              "fieldName": "y",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "sortKeyIsSingleField": true,
          "sortKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": undefined,
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasCdc": false,
      "hasPublicModels": false,
      "hasTtl": false,
      "primaryKey": {
        "isComposite": true,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyIsSingleField": false,
        "partitionKeyPrefix": undefined,
        "sortKeyFields": [
          {
            "columnName": "y",
            "columnNamesForRead": [
              "y",
              "y",
            ],
            "computeFunction": undefined,
            "ean": ":y",
            "eav": "#y",
            "fieldName": "y",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "sortKeyIsSingleField": true,
        "sortKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@primaryKey defines multi-field simple primary keys 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "changeDataCaptureConfig": [],
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "external_id",
          "columnNamesForRead": [
            "external_id",
            "externalId",
          ],
          "computeFunction": undefined,
          "ean": ":externalId",
          "eav": "#externalId",
          "fieldName": "externalId",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
        {
          "columnName": "vendor",
          "columnNamesForRead": [
            "vendor",
            "vendor",
          ],
          "computeFunction": undefined,
          "ean": ":vendor",
          "eav": "#vendor",
          "fieldName": "vendor",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "String",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": false,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasCdc": false,
        "hasPublicModels": false,
        "hasTtl": false,
        "primaryKey": {
          "isComposite": false,
          "isSingleField": false,
          "partitionKeyFields": [
            {
              "columnName": "vendor",
              "columnNamesForRead": [
                "vendor",
                "vendor",
              ],
              "computeFunction": undefined,
              "ean": ":vendor",
              "eav": "#vendor",
              "fieldName": "vendor",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
            {
              "columnName": "external_id",
              "columnNamesForRead": [
                "external_id",
                "externalId",
              ],
              "computeFunction": undefined,
              "ean": ":externalId",
              "eav": "#externalId",
              "fieldName": "externalId",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "String",
            },
          ],
          "partitionKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": undefined,
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasCdc": false,
      "hasPublicModels": false,
      "hasTtl": false,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": false,
        "partitionKeyFields": [
          {
            "columnName": "vendor",
            "columnNamesForRead": [
              "vendor",
              "vendor",
            ],
            "computeFunction": undefined,
            "ean": ":vendor",
            "eav": "#vendor",
            "fieldName": "vendor",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
          {
            "columnName": "external_id",
            "columnNamesForRead": [
              "external_id",
              "externalId",
            ],
            "computeFunction": undefined,
            "ean": ":externalId",
            "eav": "#externalId",
            "fieldName": "externalId",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "String",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;

exports[`@primaryKey defines simple primary keys 2`] = `
{
  "additionalImports": [],
  "dependenciesModuleId": "dependencies",
  "models": [
    {
      "changeDataCaptureConfig": [],
      "consistent": false,
      "fields": [
        {
          "columnName": "_ct",
          "columnNamesForRead": [
            "_ct",
          ],
          "computeFunction": undefined,
          "ean": ":createdAt",
          "eav": "#createdAt",
          "fieldName": "createdAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "id",
          "columnNamesForRead": [
            "id",
            "id",
          ],
          "computeFunction": undefined,
          "ean": ":id",
          "eav": "#id",
          "fieldName": "id",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "ID",
        },
        {
          "columnName": "_md",
          "columnNamesForRead": [
            "_md",
          ],
          "computeFunction": undefined,
          "ean": ":updatedAt",
          "eav": "#updatedAt",
          "fieldName": "updatedAt",
          "isDateType": true,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Date",
        },
        {
          "columnName": "_v",
          "columnNamesForRead": [
            "_v",
          ],
          "computeFunction": undefined,
          "ean": ":version",
          "eav": "#version",
          "fieldName": "version",
          "isDateType": false,
          "isRequired": true,
          "isScalarType": true,
          "typeName": "Int",
        },
      ],
      "isLedger": false,
      "isPublic": false,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "table": {
        "enableEncryption": "IsProd",
        "enablePointInTimeRecovery": "IsProd",
        "hasCdc": false,
        "hasPublicModels": false,
        "hasTtl": false,
        "primaryKey": {
          "isComposite": false,
          "isSingleField": true,
          "partitionKeyFields": [
            {
              "columnName": "id",
              "columnNamesForRead": [
                "id",
                "id",
              ],
              "computeFunction": undefined,
              "ean": ":id",
              "eav": "#id",
              "fieldName": "id",
              "isDateType": false,
              "isRequired": true,
              "isScalarType": true,
              "typeName": "ID",
            },
          ],
          "partitionKeyPrefix": undefined,
          "type": "primary",
        },
        "secondaryIndexes": [],
        "tableName": "TableExample",
      },
      "ttlConfig": undefined,
      "typeName": "Example",
    },
  ],
  "tables": [
    {
      "enableEncryption": "IsProd",
      "enablePointInTimeRecovery": "IsProd",
      "hasCdc": false,
      "hasPublicModels": false,
      "hasTtl": false,
      "primaryKey": {
        "isComposite": false,
        "isSingleField": true,
        "partitionKeyFields": [
          {
            "columnName": "id",
            "columnNamesForRead": [
              "id",
              "id",
            ],
            "computeFunction": undefined,
            "ean": ":id",
            "eav": "#id",
            "fieldName": "id",
            "isDateType": false,
            "isRequired": true,
            "isScalarType": true,
            "typeName": "ID",
          },
        ],
        "partitionKeyPrefix": undefined,
        "type": "primary",
      },
      "secondaryIndexes": [],
      "tableName": "TableExample",
    },
  ],
}
`;
